--- a/2.はじめてガイド/6.店舗掲載登録・ログインについて/8.解約について/2.店舗掲載登録を解約した後、再登録したい.md
+++ b/2.はじめてガイド/6.店舗掲載登録・ログインについて/8.解約について/2.店舗掲載登録を解約した後、再登録したい.md
@@ -1,5 +1,24 @@
-# 店舗掲載登録を解約した後、再登録したい
+<h3>店舗掲載登録を解約した後、再登録したい</h3>
+<hr>
 
-店舗掲載登録を一度解約しますと情報が削除されるため再登録については、情報を引き継ぐことはできません。  
+コネポケでご利用できるアカウントは１つのみ有効です。
 
-再登録をされる場合は、情報を初めからご登録いただき、再度確認書類の提出をしていただく必要がございます。  
+店舗掲載登録（自動課金）を解約した後、再登録をご希望される場合は、過去のアカウントを復活させる対応となります。
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>店舗掲載登録（自動課金）を再登録するには</strong>
+</div>
+
+<ol>
+<li>店舗掲載登録（自動課金）を解約した状態でログインしようとすると、決済画面が表示されます。</li>
+<br>
+<li>決済していただくと、解約前の情報を引き継ぐことができ、店舗掲載登録のサービスを再度ご利用いただけます。<br>
+<br>
+※コネポケでご利用できるアカウントは１電話番号につき１つのみ有効です。<br>
+<br>
+※再度新規登録しようとしても、コネポケに既に登録されている電話番号の場合、<font color="#ff0000">「この番号は既に登録されています」</font>と表示されます。<br>
+<br>
+※もう１アカウント必要な場合は、恐れ入りますが、別のご担当者様の携帯番号でご登録をお願いいたします。</li>
+</ol>
+
+<hr>
