--- a/2.はじめてガイド/6.店舗掲載登録・ログインについて/8.解約について/1.店舗掲載登録を解約する.md
+++ b/2.はじめてガイド/6.店舗掲載登録・ログインについて/8.解約について/1.店舗掲載登録を解約する.md
@@ -1,12 +1,92 @@
-# 店舗掲載登録を解約する
+<h3>店舗掲載登録を解約する</h3>
+<hr>
 
-   店舗掲載登録を解約については以下の手順で解約申請をお願いいたします
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>店舗掲載登録（自動課金）の解約手順</strong>
+</div>
 
-サイドメニューの［ガイド＆ヘルプ］＞［お問い合わせ］＞［お問い合わせ項目を選ぶ］＞［店舗掲載登録ついて］＞【店舗掲載登録を解約する】
-より、必要事項をご入力して送信してください。
+ご利用の決済方法によって解約方法が異なりますので、決済方法をご確認の上、下記の方法でお手続きください。
 
-解約専用のメールフォームに必要事項をご入力して送信してください。
+<h3>■Appを通じて決済した場合</h3>
 
-コネポケ事務局で現在取引中の商品や出品中・リクエスト中に商品がないか確認のうえ解約手続を行います。
+iPhone／iPadの「設定」アプリから解約してください。
 
-コネポケ事務局から解約完了メールが届きますので、メールの配信をもって解約が完了したします。
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ol>
+<li>ホーム画面から「設定」アプリを開き、一番上に表示されている「自分の名前（Apple ID）」をタップ</li>
+<br>
+<li>「サブスクリプション」をタップ</li>
+<br>
+<li>加入中の継続利用サービス一覧が表示されますので、解約したいコンテンツをタップ</li>
+<br>
+<li>「サブスクリプションをキャンセルする」をタップ</li>
+<br>
+<li>［確認］をタップすると解約完了となります</li>
+</ol>
+</div>
+
+<h3>■Google Playを通じて決済した場合</h3>
+
+GooglePlayアプリから解約してください。
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ol>
+<li>Android スマートフォンまたはタブレットでGooglePlayを開きます</li>
+<br>
+<li>正しいGoogleアカウントにログインしていることを確認します</li>
+<br>
+<li>左上の「三」をタップし、［定期購入］を選択します</li>
+<br>
+<li>解約する定期購入を選択します</li>
+<br>
+<li>［定期購入を解約］をタップ</li>
+<br>
+<li>画面の指示に沿って操作を行います</li>
+<br>
+<li>「20●●/●/●に解約されます」と表示されたら解約完了となります</li>
+</ol>
+</div>
+
+<h3>■ブラウザを通じてクレジット決済した場合</h3>
+
+登録完了または自動更新時にお送りするメールに［自動課金停止URL］が記載されております。  
+<font color="#ff0000">※メールは大切に保管してください。</font>
+
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ol>
+<li>［自動課金停止URL］をクリックすると自動課金番号の入力ページに遷移します</li>
+<br>
+<li>自動課金番号を入力し、［次へ］をクリック</li>
+<br>
+<li>確認画面が出ますので、退会手続き（課金停止）をお願いいたします</li>
+</div>
+
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;"><font color="ff0000">
+<ul>
+<li>店舗掲載登録会員は1ヶ月ごとの自動継続課金となります</li>
+<br>
+<li>ご解約いただいても次回更新日の前日までは店舗掲載登録会員サービスを利用になれます</li>
+<br>
+<li>解除した日付にかかわらず、日割り返金はできません</li>
+<br>
+<li>既にお支払い済みの月額料金（11,000円）については、いかなる理由であっても返金はいたしませんので、あらかじめご了承ください。</li>
+</font>
+</ul>
+</div>
+
+<font color="ff0000">※店舗掲載登録（自動課金）を解約すると店舗情報が掲載されなくなり、サービスをご利用になれません。  
+解約した状態でログインしようとすると、決済画面が表示されます。  
+決済していただくと、店舗掲載登録会員のサービスを再度ご利用いただけます。</font>
+
+店舗掲載登録を退会したい方は以下の手順で申請をお願いいたします。
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>店舗掲載登録の退会申請</strong>
+</div>
+
+サイドメニューの［ガイド＆ヘルプ］＞［お問い合わせ］＞［お問い合わせ項目を選ぶ］＞［退会ついて］＞【退会する】より、必要事項をご入力して送信してください。
+
+退会専用のメールフォームに必要事項をご入力して送信してください。
+
+コネポケ事務局から退会完了メールが届きますので、メールの配信をもって退会が完了したします。
+
+<hr>
