--- a/2.はじめてガイド/5.会員登録・ログインについて/7.退会・プレミアム会員の解約について/4.退会した後、再登録したい.md
+++ b/2.はじめてガイド/5.会員登録・ログインについて/7.退会・プレミアム会員の解約について/4.退会した後、再登録したい.md
@@ -22,11 +22,11 @@
 <br>
 <li>登録住所</li>
 <br>
-<li>携帯電話番号</li>
+<li>登録していた携帯番号</li>
 <br>
 <li>登録メールアドレス<br>
 <br>
-<font color="#ff0000">※登録携帯電話番号・メールアドレスと現在ご利用の携帯電話番号・メールアドレスが相違している場合、併せてご明記ください。</font></li>
+<font color="#ff0000">※コネポケ登録時の携帯電話番号・メールアドレスと現在ご利用の携帯電話番号・メールアドレスが相違している場合、併せてご明記ください。</font></li>
 </ol>
 </div>
 
