--- a/6.お問い合わせ/5.退会について/2.退会した後、再登録したい.md
+++ b/6.お問い合わせ/5.退会について/2.退会した後、再登録したい.md
@@ -9,7 +9,7 @@
 <strong>【コネポケを退会しています。復帰されたい場合はガイド＆ヘルプの「お問い合わせ」よりご連絡ください。】</strong>
 
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<strong>再登録の流れ</strong>
+<strong>再登録の流れ（個人会員様）</strong>
 </div>
 
 再登録をご希望の場合、以下の情報を明記のうえご連絡ください。
@@ -22,11 +22,33 @@
 <br>
 <li>登録住所</li>
 <br>
-<li>携帯電話番号</li>
+<li>登録していた携帯番号</li>
 <br>
 <li>登録メールアドレス<br>
 <br>
-<font color="#ff0000">※登録携帯電話番号・メールアドレスと現在ご利用の携帯電話番号・メールアドレスが相違している場合、併せてご明記ください。</font></li>
+<font color="#ff0000">※コネポケ登録時の携帯電話番号・メールアドレスと現在ご利用の携帯電話番号・メールアドレスが相違している場合、併せてご明記ください。</font></li>
+</ol>
+</div>
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>再登録の流れ（店舗掲載会員様）</strong>
+</div>
+
+再登録をご希望の場合、以下の情報を明記のうえご連絡ください。
+
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ol>
+<li>登録していた携帯番号</li>
+<br>
+<li>会社名</li>
+<br>
+<li>代表者様名</li>
+<br>
+<li>登録住所</li>
+<br>
+<li>登録メールアドレス<br>
+<br>
+<font color="#ff0000">※コネポケ登録時の携帯電話番号・メールアドレスと現在ご利用の携帯電話番号・メールアドレスが相違している場合、併せてご明記ください。</font></li>
 </ol>
 </div>
 
