--- a/1.コネポケ公式ガイド/ルールとマナー/10.通報をしたのに対処してくれない.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/10.通報をしたのに対処してくれない.md
@@ -1,8 +1,7 @@
 <h3>通報をしたのに対処してくれない</h3>
 <hr>
 
-通報いただいた商品や、迷惑行為・規約違反についてはコネポケ事務局にて順次、事実確認しております。<br>
-<br>
+通報いただいた商品や、迷惑行為・規約違反についてはコネポケ事務局にて順次、事実確認しております。
 対応が遅れることもございますが、何卒ご了承ください。
 
 <hr>
