--- a/5.利用規約など/ルールとマナー/7.不快な問い合わせへの対処について.md
+++ b/5.利用規約など/ルールとマナー/7.不快な問い合わせへの対処について.md
@@ -1,8 +1,8 @@
 <h3>不快な問い合わせへの対処について</h3>
 <hr>
 
-不快な問い合わせやコメントをされた場合は、対象商品ページより<font color="#ff0000">「通報」</font>ください。<br>
-<br>
+不快な問い合わせやコメントをされた場合は、対象商品ページより<font color="#ff0000">「通報」</font>ください。
+
 コネポケのガイドおよび利用規約に違反している可能性のある、不快な問い合わせやコメントは、以下の手順でご報告ください。
 
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
@@ -33,7 +33,8 @@
 </ul>
 </div>
 
-コネポケ事務局にて内容を確認させていただき、適切に対応いたします。<br>
-<br>
+コネポケ事務局にて内容を確認させていただき、適切に対応いたします。
+
 <font color="#ff0000">※表現や言葉の違いにより事務局での判断が難しい場合、コメントの削除ができない場合がございますので、ご了承ください。</font>
+
 <hr>
