--- a/5.利用規約など/ルールとマナー/8.ドタキャンされました.md
+++ b/5.利用規約など/ルールとマナー/8.ドタキャンされました.md
@@ -1,8 +1,8 @@
 <h3>ドタキャンされました</h3>
 <hr>
 
-不適切な対応をされるユーザーがいる場合、相手ユーザーを特定させていただくため、商品画面の<font color="#ff0000">［通報］</font>から詳細をお知らせください。<br>
-<br>
+不適切な対応をされるユーザーがいる場合、相手ユーザーを特定させていただくため、商品画面の<font color="#ff0000">［通報］</font>から詳細をお知らせください。
+
 コネポケのガイドおよび利用規約に違反している可能性のある、相手ユーザーは、以下の手順でご報告ください。
 
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
@@ -33,8 +33,8 @@
 </ul>
 </div>
 
-コネポケ事務局にて内容を確認させていただき、適切に対応いたします。<br>
-<br>
+コネポケ事務局にて内容を確認させていただき、適切に対応いたします。
+
 <font color="#ff0000">※悪質なユーザーの場合はアカウント停止などを検討させていただきます。</font>
 
 <hr>
