--- a/2.はじめてガイド/5.会員登録・ログインについて/5.本人確認書類について/3.利用できる本人確認書類について.md
+++ b/2.はじめてガイド/5.会員登録・ログインについて/5.本人確認書類について/3.利用できる本人確認書類について.md
@@ -1,3 +1,3 @@
-# 利用できる本人確認書類について
+<h3>利用できる本人確認書類について</h3>
 
 ![guide](https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/4.カテゴリから探す/5.会員登録・ログインについて/images/confirm_document.jpg)
