--- a/2.はじめてガイド/1.出品する/6.出品後のよくある質問/1.送料はどちらが負担するのでしょうか.md
+++ b/2.はじめてガイド/1.出品する/6.出品後のよくある質問/1.送料はどちらが負担するのでしょうか.md
@@ -1,25 +1,35 @@
-# 送料はどちらが負担するのでしょうか
+<h3>送料はどちらが負担するのでしょうか</h3>
+<hr>
 
-送料については、コネポケで負担者の取り決めはしておりませんので、引取者様とご相談いただきお決め頂くようになります。
+送料については、コネポケで負担者の取り決めはしておりませんので、相手ユーザー様とご相談いただきお決め頂くようになります。
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>配送の注意事項</strong>
+</div>
 
 ［配送可能］で出品する場合は、送料でのトラブルを防止するため、商品説明内に負担者のご希望をご記載いただくことをお勧めしております。
 
-また、配送で取引を行う場合は、
-取引メッセージで以下の内容の確認を行ない、  
-ユーザ様同士で認識を一致させたうえで発送ください。
+また、配送で取引を行う場合は、取引メッセージで以下の内容の確認を行ない、ユーザ様同士で認識を一致させたうえで発送ください。
 
-    ・配送料の負担について
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ul>
+<li>配送料の負担について</li>
+<li>配送代金について</li>
+<li>配送業者の確認</li>
+<li>梱包の仕方について</li>
+</ul>
+</div>
 
-    ・配送の代金について
-
-    ・配送業者の確認
-
-    ・梱包の仕方について
-
-以下のような行為は絶対にお控えください。
-
-**「勝手に着払いで配送する」**  
-**「適当な住所を教える」**  
-**「取引メッセージで決めた以外の方法で配送」**
+<font color="#ff0000"><strong>以下のような行為は絶対にお控えください。</strong></font>
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 1px solid #ff3333; background-color: #ffe0e2; "><font color="ff0000">
+<ul>
+<li>勝手に着払いで配送する</li>
+<li>適当な住所を教える</li>
+<li>取引メッセージで決めた以外の方法で配送</li>
+</ul>
+</font>
+</div>
 
 配送に関しては、コネポケでサポートや対応は一切しておりませんので、予めご了承ください。
+
+<hr>
