--- a/2.はじめてガイド/1.出品する/6.出品後のよくある質問/2.取り置きをお願いされた.md
+++ b/2.はじめてガイド/1.出品する/6.出品後のよくある質問/2.取り置きをお願いされた.md
@@ -1,5 +1,8 @@
-# 取り置きをお願いされた
+<h3>取り置きをお願いされた</h3>
+<hr>
 
 引取希望ユーザーから、取り置きを相談されることがあります。
 
-取り置きや専用出品によるトラブルはサポートできませんので、お断りいただくことをお勧めします。
+<font color="ff0000">取り置きや専用出品によるトラブルはサポートできませんので、お断りいただくことをお勧めします。</font>
+
+<hr>
