--- a/2.はじめてガイド/1.出品する/6.出品後のよくある質問/7.再出品したい.md
+++ b/2.はじめてガイド/1.出品する/6.出品後のよくある質問/7.再出品したい.md
@@ -1,17 +1,84 @@
-# 再出品したい
+<h3>再出品したい</h3>
+<hr>
 
-出品停止にした商品は、以下の手順で再出品できます。
+出品を停止にして下書きに入れた商品は、以下の手順で再出品できます。
 
-■iOS、Androidアプリをご利用の場合
+<h3>■iOS、Androidアプリをご利用の場合</h3>
 
-1. HOME画面右下の［出品ボタン］またはサイドメニューの［出品する］をタップ
+<ol>
+<li>HOME画面右下の［出品ボタン］またはサイドメニューの［出品する］をタップ</li>
+<br>
+<li>［下書き一覧へ］または、右上の［フォルダアイコン］をタップ</li>
+<br>
+<li>下書き一覧ページより、再出品したい投稿をタップ</li>
+<br>
+<li>出品画面一番下の［出品する］ボタンをタップと出品完了です</li>
+</ol>
 
-1. ［下書き一覧］をタップ
+<hr>
 
-1. 下書き一覧ページより、再出品したい投稿をタップする
+<h3>■スマートフォンブラウザをご利用の場合</h3>
 
-1. 出品画面一番下の［出品する］ボタンをタップ
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>再出品の手順１</strong>
+</div>
 
-■スマートフォンブラウザをご利用の場合
+<ol>
+<li>HOME画面右下の［出品ボタン］またはサイドメニューの［出品する］をタップ</li>
+<br>
+<li>出品画面の一番下の［下書き一覧］をタップ</li>
+<br>
+<li>下書き一覧ページより、再出品したい投稿をタップ</li>
+<br>
+<li>出品画面一番下の［出品する］ボタンをタップと出品完了です</li>
+</ol>
 
-■PCブラウザをご利用の場合
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>再出品の手順２</strong>
+</div>
+
+<ol>
+<li>HOME画面右上の［ユーザーアイコン］をタップ</li>
+<br>
+<li>HOME画面左上の［三］をタップ</li>
+<br>
+<li>サイドメニューの［下書き一覧］をタップ</li>
+<br>
+<li>下書き一覧ページより、再出品したい投稿をタップ</li>
+<br>
+<li>出品画面一番下の［出品する］ボタンをタップと出品完了です</li>
+</ol>
+
+<hr>
+
+<h3>■PCブラウザをご利用の場合</h3>
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>再出品の手順１</strong>
+</div>
+
+<ol>
+<li>HOME画面右下の［出品ボタン］またはサイドメニューの［出品する］をクリック</li>
+<br>
+<li>出品画面の一番下の［下書き一覧］をクリック</li>
+<br>
+<li>下書き一覧ページより、再出品したい投稿をクリック</li>
+<br>
+<li>出品画面一番下の［出品する］ボタンをクリックと出品完了です</li>
+</ol>
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>再出品の手順２</strong>
+</div>
+
+<ol>
+<li>HOME画面右上の［ユーザーアイコン］をクリック</li>
+<br>
+<li>サイドメニューの［下書き一覧］をクリック</li>
+<br>
+<li>下書き一覧ページより、再出品したい投稿をクリック</li>
+<br>
+<li>出品画面一番下の［出品する］ボタンをクリックと出品完了です</li>
+</ol>
+
+<hr>
