--- a/2.はじめてガイド/1.出品する/6.出品後のよくある質問/8.一度出品した商品を取り下げることはできますか.md
+++ b/2.はじめてガイド/1.出品する/6.出品後のよくある質問/8.一度出品した商品を取り下げることはできますか.md
@@ -1,20 +1,55 @@
-# 一度出品した商品を取り下げることはできますか
+<h3>一度出品した商品を取り下げることはできますか</h3>
+<hr>
 
 下記手順で取り下げできます。  
 （ログインした状態で操作可能です）
 
-■iOS、Androidアプリをご利用の場合  
+<h3>■iOS、Androidアプリをご利用の場合</h3>
 
-1. TOP画面左上の［三］を選択
+<ol>
+<li>TOP画面左上の［三］をタップ</li>
+<br>
+<li>サイドメニューにある［履歴・取引メッセージ］をタップ</li>
+<br>
+<li>出品履歴［出品中］一覧より、取り下げたい投稿の編集アイコンをタップ</li>
+<br>
+<li>「出品を一旦停止しますか？」と表示されますので［下書き一覧へ］をタップ</li>
+<br>
+<li>取り下げた投稿は下書きに保存されます</li>
+</ol>
 
-1. サイドメニューにある［履歴］をタップ
+<hr>
 
-1. 出品履歴［出品中］一覧より、取り下げたい投稿の編集アイコンをタップ
+<h3>■スマートフォンブラウザをご利用の場合</h3>
 
-1. 「出品を一旦停止しますか？」と表示されますので［下書き一覧へ］をタップ
+<ol>
+<li>TOP画面右上の［ユーザーアイコン］をタップ</li>
+<br>
+<li>TOP画面左上の［三］をタップ</li>
+<br>
+<li>サイドメニューにある［履歴・取引メッセージ］をタップ</li>
+<br>
+<li>出品履歴［出品中］一覧より、取り下げたい投稿の編集アイコンをタップ</li>
+<br>
+<li>「出品を一旦停止しますか？」と表示されますので［下書き一覧へ］をタップ</li>
+<br>
+<li>取り下げた投稿は下書きに保存されます</li>
+</ol>
 
-1. 取り下げた投稿は下書きに保存されます
+<hr>
 
-■スマートフォンブラウザをご利用の場合
+<h3>■PCブラウザをご利用の場合</h3>
 
-■PCブラウザをご利用の場合
+<ol>
+<li>TOP画面右上の［ユーザーアイコン］をクリック</li>
+<br>
+<li>サイドメニューにある［履歴・取引メッセージ］をクリック</li>
+<br>
+<li>出品履歴［出品中］一覧より、取り下げたい投稿の編集アイコンをクリック</li>
+<br>
+<li>「出品を一旦停止しますか？」と表示されますので［下書き一覧へ］をクリック</li>
+<br>
+<li>取り下げた投稿は下書きに保存されます</li>
+</ol>
+
+<hr>
