--- a/2.はじめてガイド/1.出品する/6.出品後のよくある質問/13.取引完了後に出品商品を履歴から削除できますか.md
+++ b/2.はじめてガイド/1.出品する/6.出品後のよくある質問/13.取引完了後に出品商品を履歴から削除できますか.md
@@ -1,4 +1,8 @@
-# 取引完了後に出品商品を履歴から削除できますか
+<h3>取引完了後に出品商品を履歴から削除できますか</h3>
+<hr>
 
-ユーザ様側での削除はできません。  
-（履歴の商品表示期間は、取引成立から120日間です）
+ユーザ様側での削除はできません。
+
+<font color="ff0000">履歴の商品表示期間は、取引成立から120日間です 。  
+120日後に自動削除されます。</font>
+<hr>
