--- a/2.はじめてガイド/1.出品する/6.出品後のよくある質問/9.値段交渉された.md
+++ b/2.はじめてガイド/1.出品する/6.出品後のよくある質問/9.値段交渉された.md
@@ -1,22 +1,53 @@
-# 値段交渉された
+<h3>値段交渉された</h3>
+<hr>
 
-コネポケは「無料」で「あげたり」「もらったり」するサービスです。
+<h3><font color="#ff0000">コネポケは「無料」で「あげたり」「もらったり」するサービスです
+</font></h3>
 
 コネポケには売買に関わるフリマ・オークション・ショッピングなどの機能のご用意はございません。
 
-値段交渉をされたり、お金を要求された時は問題発生となった対象商品ページより［**通報**］ください。
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+コネポケサイトを利用しての値段交渉は､コネポケでは<font color="ff0000"><strong>最も重大な違反行為</strong></font>としています。
+</div>
 
-    【通報できる内容】
+値段交渉をされたり、お金を要求された時は問題発生となった対象商品ページより<font color="#ff0000"><b>［通報］</b></font>ください。
 
-    ・不適切なコメント  
-    ・規約に違反する出品  
-    ・規約に違反する行為  
-    ・法令違反の報告  
-    ・悪質ユーザーの報告  
-    ・その他
+コネポケの違反行為は、以下の手順でご報告ください。
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>通報の手順</strong>
+</div>
+
+<ol>
+<li>問題発生となった対象商品を選択し、［通報］をタップ</li>
+<br>
+<li>違反の種類を選択し、通報理由の詳細を入力<br>
+<font color="#ff0000">※できる限り詳しく内容をご記入ください。</font></li>
+<br>
+<li>「問題の報告を送信しました」とメッセージが表示されたら報告完了です。</li>
+</ol>
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>【通報できる内容】</strong>
+</div>
+
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+<ul>
+<li>不適切なコメント</li>
+<li>規約に違反する出品</li>
+<li>規約に違反する行為</li>
+<li>法令違反の報告</li>
+<li>悪質ユーザーの報告</li>
+<li>その他
+</ul>
+</div>
 
 コネポケ事務局にて内容を確認させていただき、適切に対応いたします。
 
-※ユーザー様がお金を支払ってでも必要な商品であったとしても、コネポケで有償での取引は規約違反となります。
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+<font color="ff0000"><strong>※ユーザー様がお金を支払ってでも必要な商品であったとしても、コネポケでは有償でのお取引は規約違反となります。<br>
+<br>
+<font color="ff0000">※有償取引や値段交渉が発覚した場合は、即刻アカウントを停止させていただきます。</strong></font>
+</div>
 
-規約違反をされたユーザーはアカウント停止などを検討させていただきます。
+<hr>
