--- a/2.はじめてガイド/3.リクエストする/7.リクエスト後のよくある質問/2.一度リクエストした商品を取り下げることはできますか.md
+++ b/2.はじめてガイド/3.リクエストする/7.リクエスト後のよくある質問/2.一度リクエストした商品を取り下げることはできますか.md
@@ -1,6 +1,14 @@
-# 一度リクエストした商品を取り下げることはできますか
+<h3>一度リクエストした商品を取り下げることはできますか</h3>
+<hr>
 
 リクエストした商品を取り下げたい時は、削除することになります。
 
-削除方法については、  
+リスエスト商品を下書き保存することはできません。
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>削除の手順について</strong>
+</div>
+
 ［はじめてガイド］＞［リクエストする］＞［リクエストするには］＞【リクエスト商品を削除する】よりご確認ください。
+
+<hr>
