--- a/2.はじめてガイド/3.リクエストする/7.リクエスト後のよくある質問/9.取引完了後にリクエスト商品を履歴から削除できますか.md
+++ b/2.はじめてガイド/3.リクエストする/7.リクエスト後のよくある質問/9.取引完了後にリクエスト商品を履歴から削除できますか.md
@@ -1,4 +1,9 @@
-# 取引完了後にリクエスト商品を履歴から削除できますか
+<h3>取引完了後にリクエスト商品を履歴から削除できますか</h3>
+<hr>
 
-ユーザ様側での削除はできません。  
-（履歴の商品表示期間は、取引成立から120日間となります）
+ユーザ様側での削除はできません。
+
+<font color="ff0000">履歴の商品表示期間は、取引成立から120日間です 。  
+120日後に自動削除されます。</font>
+
+<hr>
