--- a/5.利用規約など/利用規約など/1.利用規約.md
+++ b/5.利用規約など/利用規約など/1.利用規約.md
@@ -1,9 +1,9 @@
-# コネポケ利用規約
+<h3>コネポケ利用規約</h3>
+<hr>
 
--------------------  
 この「利用規約」（以下「本規約」といいます。）は、株式会社エリヤ（以下「当社」といいます。）が「コネポケ」の名称で提供・運営する、不用品・リサイクル品を無料で受渡しする機会を提供するサービス（詳細は第3条で定めるものとし、以下「本サービス」といいます。）の利用条件を定めるものです。  
 
-## 第1条（この利用規約について）
+<h3>第1条（この利用規約について）</h3>
 
 1.本規約は、利用者全員に適用されます。  
 2.利用者は、本規約への同意がない場合には、本サービスをご利用いただくことはできません。  
@@ -12,7 +12,7 @@
 5.本サービスには、本規約の他に、本アプリ及び本サイトに本サービスの利用方法やご注意いただくべき事項が表示されています。これらも実質的には本規約の一部をなすものとします。  
 6.本サービスご利用前には本規約を必ずお読みください。  
 
-## 第2条（定義）  
+<h3>第2条（定義） </h3>
 
 本規約における用語の定義は、特別の定めがある場合を除き次の通りとします。  
 （1）【本アプリ】本サービスを提供しているアプリ  
@@ -23,7 +23,7 @@
 （6）【機密情報】個人情報、顧客情報、企業情報、その他すべての情報  
 （7）【反社会的勢力】暴力団・暴力団員・暴力団員でなくなったときから５年を経過しない者、暴力団準構成員・暴力団関係企業・総会屋等・社会運動標ぼうゴロ又は特殊知能暴力集団等、その他これらに準ずる者  
 
-## 第3条（本サービス内容）  
+<h3>第3条（本サービス内容）</h3>
 
 1.当社は、次に掲げるサービスを本サービスとして提供します。  
 （1）不用品・リサイクル品を無料で受渡しする機会を提供するサービス  
@@ -37,7 +37,7 @@
 4.店舗掲載登録会員は、プレミアム会員のサービス及び会員の店舗情報を広告として掲載するサービスのご利用ができます。  
 5.本サービスの一部である、不用品・リサイクル品を無料で受渡しする場を提供するサービスにおいて、当社は場を提供するのみであり、受け渡しの当事者となることはありません。そのため、当事者としての責任を負わないものとします。  
 
-## 第4条（コネポケ会員登録）
+<h3>第4条（コネポケ会員登録）</h3>
 
 1.利用者は、本サービス利用開始にあたって、利用者本人の申請によりコネポケ会員登録することが必要です。  
 2.登録申請は、当社が定める方法により、ＩＤ（携帯電話番号）、パスワード、氏名、住所、生年月日、名称、メールアドレス等を通知することにより行います。虚偽の申請は認められません。  
@@ -45,7 +45,7 @@
 4.コネポケ会員は、コネポケ会員登録した内容に変更があった場合、当社が定める方法により利用者情報の変更を行わなければなりません。変更しないことにより、会員に不利益が生じても当社は責任を負いません。  
 5.出品以外のサービスを利用するには必ず本人確認書類の提出が必要です。  
 
-## 第5条（コネポケ会員登録の取消）
+<h3>第5条（コネポケ会員登録の取消）</h3>
 
 1.当社は、コネポケ会員が次のいずれかに該当すると判断した場合は、コネポケ会員登録を取消すことがあります。  
 （1）当社の定める会員登録審査基準を満たさない場合  
@@ -55,19 +55,19 @@
 （5）その他、当社がコネポケ会員登録を承認することが適切でないと判断した場合  
 2.当社は、前項の行為を行った場合に、その理由をコネポケ会員に開示する義務を負いません。  
 
-## 第6条（ＩＤ・パスワード等の管理）
+<h3>第6条（ＩＤ・パスワード等の管理）</h3>
 
 1.コネポケ会員は、ＩＤ（携帯電話番号）及びパスワードを、第三者に漏洩しないよう、自己の責任において厳重に管理して下さい。  
 2.ＩＤ及びパスワードを利用して行われた行為の責任は、そのＩＤを保有している会員の責任とみなし、当社は一切の責任を負わないものとします。  
 3.万一、許可無く自分のＩＤが利用された場合、又はＩＤならびにパスワードが第三者に漏洩してしまった場合は、ただちに当社までご連絡下さい。  
 
-## 第7条（利用方法）
+<h3>第7条（利用方法）</h3>
 
 1.コネポケ会員は、その種別に応じて、商品の出品、商品の引き取り、リクエスト商品の投稿、レスポンス取引、広告の掲載、その他本アプリ及び本サイトに定めるサービスを利用することができます。  
 2.コネポケ会員は、本サービスを本規約に従い、民法、商法、個人情報保護法、著作権法その他法令を遵守して利用して下さい。  
 3.コネポケ会員は、本サービスを利用したことに関する一切の責任を負います。当社は会員の利用につき、特に定める場合を除き、一切の責任を負いません。  
 
-## 第8条（商品の出品）
+<h3>第8条（商品の出品）</h3>
 
 1.コネポケ会員は、本サービス所定の手続に従い、商品の出品を行うものとします。  
 2.当社は、ガイド記載の特定の出品方法について基準を設け、コネポケ会員が基準に合致しない場合には、審査を行い、当該出品方法の利用を制限することができます。  
@@ -76,13 +76,13 @@
 5.コネポケ会員は、商品を出品する際に、真に譲渡する意思のない出品、その商品情報だけでは正しく商品を理解できない又は混乱する可能性のある出品、商品説明で十分な説明を行わない出品等を行ってはなりません。また、コネポケ会員は、出品する商品と関係のない画像等を当該出品情報として掲載してはいけません。  
 6.当社は、出品に関して、本規約に違反する又は不適切であると合理的な理由に基づき判断した場合、その出品やその出品に対して発生していた取引行為等を当社の判断で取消すことができるものとします。  
 
-## 第9条（商品の引取）
+<h3>第9条（商品の引取）</h3>
 
 1.コネポケ会員は、本サービス所定の手続に従い、商品の引取を行うものとします。  
 2.コネポケ会員は、引取に先立ち、会員登録及び本人確認書類を提出する必要があります。  
 3.コネポケ会員は、引取する意思のない申し込み、及び当社の判断でいたずら目的と見受けられる取引を行うことはできません。  
 
-## 第10条（リクエスト商品の投稿）
+<h3>第10条（リクエスト商品の投稿）</h3>
 
 1.コネポケ会員は、本サービス所定の手続に従い商品のリクエストを行うものとします。  
 2.コネポケ会員は、商品のリクエストに先立ち、会員登録及び本人確認書類を提出する必要があります。  
@@ -92,7 +92,7 @@
 6.コネポケ会員は、商品をリクエストする際に、真に受け取る意思のないリクエスト、その商品情報だけでは正しく商品を理解できない又は混乱する可能性のあるリクエスト、商品説明で十分な説明を行わないリクエスト等を行ってはなりません。また、コネポケ会員は、リクエストする商品と関係のない画像等を当該リクエスト情報として掲載してはいけません。  
 7.当社は、リクエストに関して、本規約に違反する又は不適切であると合理的な理由に基づき判断した場合、そのリクエストやそのリクエストに対して発生していた取引行為等を当社の判断で取消すことができるものとします。  
 
-## 第11条（レスポンス取引）
+<h3>第11条（レスポンス取引）</h3>
 
 1.コネポケ会員は、本サービス所定の手続に従い商品のレスポンスを行うものとします。  
 2.コネポケ会員は、商品のレスポンスに先立ち、会員登録及び本人確認書類を提出する必要があります。  
@@ -102,7 +102,7 @@
 6.コネポケ会員は、商品をレスポンスする際に、真に譲渡する意思のない商品のレスポンス、その商品情報だけでは正しく商品を理解できない又は混乱する可能性があり、取引相手に商品の説明を十分に行わないレスポンス等を行ってはなりません。また、コネポケ会員は、レスポンスする商品と関係のない画像等を当該レスポンス情報としてコメントに添付してはいけません。  
 7.当社は、レスポンスに関して、本規約に違反する又は不適切であると合理的な理由に基づき判断した場合、そのレスポンスやそのレスポンスに対して発生していた取引行為等を当社の判断で取消すことができるものとします。  
 
-## 第12条（取引の実行）
+<h3>第12条（取引の実行）</h3>
 
 1.コネポケ会員が出品された商品の申し込み手続をした時点で、当該商品の取引契約が成立するものとします。  
 2.コネポケ会員は、取引契約成立後に契約に基づき発生した権利義務を第三者に譲渡、担保提供その他の処分することはできません。  
@@ -110,12 +110,12 @@
 4.取引契約は、当事者となったコネポケ会員のみが権利義務を負うものとし、当社は一切の責任を負わないものとします。  
 5.取引契約は、一般原則に則り、合意がない限り、一方的なキャンセルはできません。  
 
-## 第13条（評価）
+<h3>第13条（評価）</h3>
 
 1.コネポケ会員は、取引契約終了後に相手方当事者に対して「いいね」で評価することができます。  
 2.「いいね」はコネポケ会員の取引数や実績を判断いただくための一つの指標となりますが、何らかの効果を保証するものではありません。  
 
-## 第14条（コメント・取引メッセージ）
+<h3>第14条（コメント・取引メッセージ）</h3>
 
 1.取引メッセージは、取引契約成立後に使用可能で、それまではコメントによりコネポケ会員相互間の連絡を取ります。  
 2.コメントは第三者に公開されます。  
@@ -123,7 +123,7 @@
 4.取引メッセージは、第三者に公開されません。取引契約成立後に、取引メッセージで取引場所、方法、日時を確認のうえ、取引を進めてください。  
 5.最新の取引メッセージから2週間取引メッセージの使用がなければ、取引メッセージの使用はできなくなります。  
 
-## 第15条（店舗掲載登録）
+<h3>第15条（店舗掲載登録）</h3>
 
 1.広告掲載は、本サービスの定めに従い広告掲載情報を入力し、店舗掲載会員として登録及び決済をすることにより、広告掲載が可能になります。  
 2.新規店舗登録時に入力する情報は企業情報や個人情報などの非公開情報です。  
@@ -137,7 +137,7 @@
 （6）当社がトラブルに巻き込まれる恐れのある店舗  
 （7）当社が掲載不適当と判断した店舗  
 
-## 第16条（料金）
+<h3>第16条（料金）</h3>
 
 1.本サービスには、次の料金が発生します。  
 プレミアム会員　月額350円  
@@ -150,7 +150,7 @@
 4.店舗掲載会員は会員登録時に決済、それ以降は自動継続課金とします。  
 5.当社は、一度支払われた料金について、法に定める場合を除き、返還する義務を負わないものとします。  
 
-## 第17条（禁止事項等）
+<h3>第17条（禁止事項等）</h3>
 
 1.コネポケ会員は、以下の各号の行為は禁止されます。  
 （1）別に定める禁止されている行為  
@@ -163,7 +163,7 @@
 （8）その他当社が不適切と判断する行為  
 2.当社は、コネポケ会員に前項に定める禁止行為が見受けられた場合、又は当社が当該禁止事項に該当すると判断した場合には、当社の裁量においてコネポケ会員に対しての本サービスの提供を停止・中止、会員登録の抹消、当社サーバー内のデータ削除等することができるものとします。これによるコネポケ会員の損害について、当社は一切の責任を負わないものとします。  
 
-## 第18条（コネポケ会員の責任）
+<h3>第18条（コネポケ会員の責任）</h3>
 
 1.コネポケ会員は、本サービスの利用に関し一切の責任を負うものとし、本サービスの利用が、第三者の知的財産権等、その他の権利侵害等を行っていないことを当社に保証するものとします。  
 2.前項の定めに関わらず、コネポケ会員の本サービス利用に関して問題が発生した場合は、自己の費用と責任に於いてかかる問題を解決するものとし、当社は一切の責任を負わないものとします。  
@@ -171,7 +171,7 @@
 4.コネポケ会員が、本サービスの利用によって当社に対して損害を与えたときは、当該損害（弁護士費用を含みます。）を賠償するものとします。  
 5.コネポケ会員が、本サービスを利用することにより、第三者に対し損害を与えた場合、コネポケ会員は自己の費用と責任においてこれを賠償するものとし、当社は一切その責任を負わないものとします。この場合において、当社が、第三者から損害賠償請求を受けたときは、コネポケ会員は、当社に対し、その損害額及び費用（弁護士費用を含みます。）を賠償するものとします。  
 
-## 第19条（免責）
+<h3>第19条（免責）</h3>
 
 1.当社は、本サービスの利用によりコネポケ会員に特定の効果が生じることを保証するものではありません。  
 2.当社は、不用品・リサイクル品を無料で受渡しする場を提供するサービスにおいて、場を提供するのみであり、受け渡しの当事者となることはありません。そのため当事者としての責任を負わないものとします。  
@@ -180,16 +180,16 @@
 5.当社は、本サービスに関して会員相互、コネポケ会員と第三者との間に生じた問題については一切の責任を負いません。  
 6.当社は、天災地変等当社の責に帰さない事由により生じた損害、当社の予見の有無を問わず、特別の事情から生じた損害、逸失利益を含む間接損害について賠償責任を負わないものとします。  
 
-## 第20条（知的財産権等）
+<h3>第20条（知的財産権等）</h3>
 
 本サービスに関する知的財産権等は当社又は正当な権利を有する第三者に帰属します。コネポケ会員は、他のコネポケ会員、当社、その他第三者の権利侵害をすることのないよう、利用方法を守って本サービスを利用してください。  
 
-## 第21条（サービスの中断・停止、内容の変更、終了）
+<h3>第21条（サービスの中断・停止、内容の変更、終了）</h3>
 
 1.当社は、本サービスの運営上必要な設備の設置、システムの保守作業、又は天災等の不可抗力のために必要であると判断した場合、コネポケ会員への事前の通知又は承諾を要せずして、一時的に本サービスを中断・停止できるものとします。  
 2.当社は、コネポケ会員に事前通知をした上で当社の判断により本サービスの一部又は全てについて内容の変更又は終了できるものとします。  
 
-## 第22条（コネポケ会員登録の退会・解約）
+<h3>第22条（コネポケ会員登録の退会・解約）</h3>
 
 1.コネポケ会員は、コネポケ会員登録を退会・解約する場合は、当社所定の方法により届出を行わなければなりません。当社からの退会手続き完了メールをもって、当社とコネポケ会員との間の本サービス利用契約解約が完了したことになります。  
 2.当社は、会員登録の退会・解約の理由を問わず、支払われた料金の払い戻しは、日割りで計算した額の返還も含めて、一切行いません。  
@@ -205,17 +205,17 @@
 6.「スタンダード会員」および「プレミアム会員」を退会後、再度コネポケ会員登録を希望する際は、再度コネポケ会員登録手続を行う必要があります。退会後の再登録時は、従前のデータが引き継がれます。  
 7.「店舗掲載登録会員」を解約後、再度「店舗掲載登録会員」を希望する際は、再度「店舗掲載登録会員」登録手続を行う必要があります。解約後は従前のデータを引き継ぐことはできません。  
 
-## 第23条（秘密保持）
+<h3>第23条（秘密保持）</h3>
 
 当社及びコネポケ会員は、本サービスの利用に関して相手方から開示又は提供された機密情報を善良なる管理者の注意をもって取扱い、事前に書面により相手方の同意を得ることなく、本サービスの目的以外に使用し、又は第三者に開示又は提供してはならないものとします。  
 
-## 第24条（コネポケ会員に関する情報の収集、解析及び取扱い）
+<h3>第24条（コネポケ会員に関する情報の収集、解析及び取扱い）</h3>
 
 1.当社は、個人が特定されない形式で、コネポケ会員登録情報、端末情報、その他コネポケ会員に関する情報を、当社が行う情報配信、統計、その他のサービスに活用し又は第三者に提供するため、利用する場合があります。  
 2.当社は、本サービスの利用状況を把握するため、Cookieなどの情報収集モジュールを利用して、本サービスの利用情報を収集します。これら情報収集モジュールについては、各提供者の利用規約及びプライバシーポリシー等をご参照ください。  
 3.当社は、Cookieなどの情報収集モジュール利用により生じた損害については責任を負わないものとします。  
 
-## 第25条（反社会的勢力の排除）
+<h3>第25条（反社会的勢力の排除）</h3>
 
 1.当社及びコネポケ会員は、現在及び将来にわたり、次の各号のいずれにも該当しないことを表明し保証するものとします。  
 （1）反社会的勢力に該当すること  
@@ -227,24 +227,24 @@
 （7）自己又は第三者を利用して暴力的要求、脅迫的言動、法的責任を超えた不当な要求、風説の流布・偽計・威力等による他人の信用毀損・業務妨害を行うこと  
 2.当社又はコネポケ会員は、相手方が前項の表明・保証に違反して、前項各号の一にでも該当することが判明したときは、何らの催告をせず、直ちに本サービスに関するすべての契約を解除することができるとともに、被った損害の賠償を請求することができるものとします。  
 
-## 第26条（権利及び地位の譲渡等）
+<h3>第26条（権利及び地位の譲渡等）</h3>
 
 当社及びコネポケ会員は、本サービスに関する一切の権利、義務及び地位を、相手方の承諾なしに、譲渡、転貸、担保差入その他形態を問わず処分することはできないものとします。  
 
-## 第27条（分離可能性）
+<h3>第27条（分離可能性）</h3>
 
 本規約のいずれかの条項又はその一部が、消費者契約法その他の法令等により無効又は執行不能と判断された場合であっても、本規約の残りの規定及び一部が無効又は執行不能と判断された規定の残りの部分は、継続して完全に効力を有するものとします。  
 
-## 第28条（協議解決）
+<h3>第28条（協議解決）</h3>
 
 当社及びコネポケ会員は、本規約に定めのない事項又は本規約の解釈に疑義が生じた場合、互いに信義誠実の原則に従って協議の上、速やかに解決を図るものとします。  
 
-## 第29条（管轄裁判所）
+<h3>第29条（管轄裁判所）</h3>
 
 当社と会員との間における訴訟は、東京地方裁判所又は東京簡易裁判所を第一審の専属的合意管轄裁判所とします。  
 
-## 第30条（準拠法）
+<h3>第30条（準拠法）</h3>
 
 本規約の解釈は日本国の法律に準拠するものとします。  
 
-規約制定　令和3年4月1日 
+規約制定　令和3年4月1日
