--- a/5.利用規約など/利用規約など/2.プライバシーポリシー.md
+++ b/5.利用規約など/利用規約など/2.プライバシーポリシー.md
@@ -1,14 +1,14 @@
-# プライバシーポリシー  
+<h3>プライバシーポリシー</h3>
+<hr>
 
---------------------
-　株式会社エリヤ（以下「当社」といいます。）は、当社のサービスを提供するにあたり、サービスを使用する方（以下「利用者」といいます。）の個人情報保護の重要性を認識しその保護の徹底をはかるため、個人情報の保護に関する法律、業務主管庁が定めた事業分野別ガイドライン、その他関連する法令等を遵守するとともに、個人情報等を以下に定めるポリシー（以下「本ポリシー」といいます。）より取り扱うこととします。  
+　株式会社エリヤ（以下「当社」といいます。）は、当社のサービスを提供するにあたり、サービスを使用する方（以下「利用者」といいます。）の個人情報保護の重要性を認識しその保護の徹底をはかるため、個人情報の保護に関する法律、業務主管庁が定めた事業分野別ガイドライン、その他関連する法令等を遵守するとともに、個人情報等を以下に定めるポリシー（以下「本ポリシー」といいます。）より取り扱うこととします。
 
-## 第1条（適用）  
+<h3>第1条（適用）</h3>
 
 1.本ポリシーは、当社が提供する全てのサービス（以下「本サービス」といいます。）に適用されます。当社は別途、サービスごとのプライバシーポリシー又は利用規約（以下「個別規約」と総称します。）を定めることができ、個別規約において別途情報の取り扱いを定める場合には、個別規約の定めが優先するものとします。  
-2.利用者が未成年者の場合、法定代理人が本ポリシー及び個別規約に同意することが必要になります。  
+2.利用者が未成年者の場合、法定代理人が本ポリシー及び個別規約に同意することが必要になります。
 
-## 第2条（個人情報等の取得について）  
+<h3>第2条（個人情報等の取得について）</h3>
 
 当社は、適法かつ公正な手段により取得した次に掲げる情報を取り扱います。また、取得した利用者の個人情報等は、それぞれのサービス及び業務等において相互に利用することがあります。 なお、利用者の個人情報等は個人情報の保護に関する法律（平成１５年法律第５７号、以下「法」といいます。）第２条第１項に定める「個人情報」のうち法第２条第４項に定める「個人データ」をいうものとします（以下同様とします。）。また、情報の内容によっては個人情報に該当しない場合もありますが、当社は、そのような利用者の情報であっても取り扱いには十分配慮します。（本ポリシーにおいて、個人情報及び個人情報に該当しない利用者情報を総称して「個人情報等」といいます。）  
 （1）ログインに関する情報及びユーザー情報  
@@ -23,9 +23,9 @@
 （4）個人情報に該当するか否かにかかわらず、本サービスの利用に関する以下の情報  
 ・利用者がご利用になった本サービスの内容、ご利用日時及び回数、本サービス利用時の利用者のオンライン行動等、利用者による本サービスの利用・閲覧に関連する情報（これには、Cookie情報、アクセスログ等の利用状況に関する情報、ご利用の端末情報、位置情報、そしてIPアドレス、ブラウザ情報、ブラウザ言語等を含む利用者の通信に関する情報を含みます）  
 ・利用者が本サービスに掲載・発信した投稿、写真、コメント、取引メッセージ、評価その他の情報  
-・利用者の本サービスでの決済状況に関する情報  
+・利用者の本サービスでの決済状況に関する情報
 
-## 第3条（個人情報等の利用目的）  
+<h3>第3条（個人情報等の利用目的）</h3>
 
 当社は、当社が保有する個人情報等を次に掲げる目的のために利用します。  
 （1）本サービスに関する各種事項の連絡や情報提供を行うため  
@@ -45,9 +45,9 @@
 （15）調査のご協力依頼や各種イベントへのご参加のご案内や、その結果等をご報告するため  
 （16）弊社グループや第三者の広告の配信または表示のため  
 （17）本サービスまたは広告等に関するお問合せ、クレーム、主張等に適切に対応するため  
-（18）本サービス運営上のトラブルの解決のため  
+（18）本サービス運営上のトラブルの解決のため
 
-## 第4条（個人情報等の利用範囲）  
+<h3>第4条（個人情報等の利用範囲）</h3>
 
 当社は、当社が保有する個人情報等を次の各号に該当する場合を除き、利用目的の達成に必要な範囲をこえて取り扱いません。  
 (1)利用者の同意がある場合  
@@ -55,40 +55,40 @@
 (3)人の生命、身体又は財産の保護のために必要がある場合であって、利用者本人の同意を得ることが困難であるとき  
 (4)公衆衛生の向上又は児童の健全な育成の推進のために特に必要がある場合であって、利用者本人の同意を得ることが困難であるとき  
 (5)国の機関もしくは地方公共団体又はその委託を受けた者が、法令に定める事務をすることに対して協力する必要がある場合であって、利用者本人の同意を得ることにより当該事務の遂行に支障を及ぼすおそれがあるとき  
-(6)本サービスの全部又は一部の営業譲渡が行われ、譲渡先に対して法的に権利義務一切を引き継ぐ場合  
+(6)本サービスの全部又は一部の営業譲渡が行われ、譲渡先に対して法的に権利義務一切を引き継ぐ場合
 
-## 第5条（情報管理の委託）  
+<h3>第5条（情報管理の委託）</h3>
 
-当社は、必要な範囲内で個人情報等の管理業務の全部又は一部を委託する場合があります。委託する場合は、委託先を含めて情報管理義務を徹底し、利用者の情報管理が適正に行われるようにします。  
+当社は、必要な範囲内で個人情報等の管理業務の全部又は一部を委託する場合があります。委託する場合は、委託先を含めて情報管理義務を徹底し、利用者の情報管理が適正に行われるようにします。
 
-## 第6条（個人情報等の管理）  
+<h3>第6条（個人情報等の管理）</h3>
 
-当社は、個人情報等へのアクセスの管理、個人情報等の持出し手段の制限、外部からの不正なアクセスの防止のための措置その他の個人情報等の漏えい、滅失又はき損の防止その他の個人情報等の安全管理のために、必要かつ適切な措置を従業員及び委託先を含めて講じます。  
+当社は、個人情報等へのアクセスの管理、個人情報等の持出し手段の制限、外部からの不正なアクセスの防止のための措置その他の個人情報等の漏えい、滅失又はき損の防止その他の個人情報等の安全管理のために、必要かつ適切な措置を従業員及び委託先を含めて講じます。
 
-## 第7条（個人情報の開示）  
+<h3>第7条（個人情報の開示）</h3>
 
 当社は、利用者本人又はその代理人から、当該個人情報の開示の求めがあったときは、次の各号の場合を除き、遅滞なく回答します。ただし、本条においては、当社が利用者の個人情報を例外的に取得した場合に限ります。  
 (1)利用者本人又は第三者の生命、身体、財産その他の権利利益を害するおそれがある場合  
 (2)当社の業務の適正な実施に著しい支障を及ぼすおそれがある場合  
 (3)法令に違反することとなる場合  
 
-## 第8条（個人情報等の訂正等）  
+<h3>第8条（個人情報等の訂正等）</h3>
 
-当社は、利用者本人又はその代理人から当該個人情報の訂正等の求めがあった場合には、遅滞なく調査を行います。その結果、当該個人情報に関し、内容が事実でない、保存期間を経過している、その他取り扱いが適正でないと認められるときは、遅滞なく訂正等を行います。ただし、本条においては、当社が利用者の個人情報を例外的に取得した場合に限ります。  
+当社は、利用者本人又はその代理人から当該個人情報の訂正等の求めがあった場合には、遅滞なく調査を行います。その結果、当該個人情報に関し、内容が事実でない、保存期間を経過している、その他取り扱いが適正でないと認められるときは、遅滞なく訂正等を行います。ただし、本条においては、当社が利用者の個人情報を例外的に取得した場合に限ります。
 
-## 第9条（Cookieなどの使用について）  
+<h3>第9条（Cookieなどの使用について）</h3>
 
 1.当社は、本サービスの利便性の向上、広告の配信、及び統計データの取得、その他第3条に記載の目的のため、Cookie及びIPアドレスなどから嗜好情報・履歴情報その他利用者の個人情報に係る情報（以下「利用情報」とする。）を収集する場合があります。  
 2.当社は、個人を識別できない形式、もしくは個人情報と照会及び照合ができない形式で利用するに限り、前項に基づき収集した利用情報を何ら制限なく利用することができるものとします。  
-3.利用者は、ブラウザの設定などでCookieを無効にすることにより、当社のCookieの使用を拒否することができます。ただし、Cookieを無効にした場合、当該利用者は、本サービスの利用において、何らかの不具合が生じる可能性があることに注意する必要があります。  
+3.利用者は、ブラウザの設定などでCookieを無効にすることにより、当社のCookieの使用を拒否することができます。ただし、Cookieを無効にした場合、当該利用者は、本サービスの利用において、何らかの不具合が生じる可能性があることに注意する必要があります。
 
-## 第10条（改訂）  
+<h3>第10条（改訂）</h3>
 
 このプライバシーポリシーを改定する場合は、利用者に告知します。  
-利用者は、本サービスをご利用になる前に、必ず最新の「プライバシーポリシー」をご確認ください。  
+利用者は、本サービスをご利用になる前に、必ず最新の「プライバシーポリシー」をご確認ください。
 
-## 第11条（お問い合わせ先）  
+<h3>第11条（お問い合わせ先）</h3>
 
-このプライバシーポリシーについてのお問い合わせは、当社のサイトの問い合わせページからご連絡ください。  
+このプライバシーポリシーについてのお問い合わせは、当社のサイトの問い合わせページからご連絡ください。
 
-制定　令和元年8月1日
+制定　令和3年4月1日
