--- a/3.よくある質問/17.お気に入りについて/3.お気に入りにしたら相手にわかりますか.md
+++ b/3.よくある質問/17.お気に入りについて/3.お気に入りにしたら相手にわかりますか.md
@@ -17,7 +17,7 @@
 <li><strong>［お気に入り］</strong>登録したユーザー数だけ数字が上がります。</li>
 <br>
 <li>アイコンをもう一度タップすると、<strong>［お気に入り］</strong>を解除することができます。<br>
-<strong>※［お気に入り（ハート）］</strong>アイコンが白色に変わりましたら解除されています。/li>
+<strong>※［お気に入り（ハート）］</strong>アイコンが白色に変わりましたら解除されています。</li>
 </ol>
 
 <hr>
