--- a/6.お問い合わせ/6.不具合について/3.本人確認書類がアップロードできない.md
+++ b/6.お問い合わせ/6.不具合について/3.本人確認書類がアップロードできない.md
@@ -92,7 +92,7 @@ Wi-Fiなど、安定した通信環境での操作をお試しください。<br
 </ol>
 </div>
 
-上記をお試しいただいても改善できない場合、下記の［コネポケ事務局へ問い合わせ］よりお問い合わせください。
+上記をお試しいただいても改善できない場合、下記よりメールにてお問い合わせください。
 
 [![mail](https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail1.jpg)](mailto:support@conepoke.com)
 
