--- a/2.はじめてガイド/5.会員登録・ログインについて/7.退会・プレミアム会員の解約について/3.退会する.md
+++ b/2.はじめてガイド/5.会員登録・ログインについて/7.退会・プレミアム会員の解約について/3.退会する.md
@@ -10,7 +10,7 @@
 <ol>
 <li>サイドメニューの［ガイド＆ヘルプ］をタップ</li>
 <br>
-<li>［お問い合わせ］＞［お問い合わせ項目を選ぶ］＞［退会について］＞<font color="#ff0000">【退会する】</font>をタップ
+<li>［お問い合わせ］＞［お問い合わせ項目を選ぶ］＞［退会について］＞<font color="#ff0000">【退会する】</font>をタップ</li>
 <br>
 <li>退会申請のメールフォームに必要事項をご入力して送信してください。</li>
 </ol>
