--- a/2.はじめてガイド/6.店舗掲載登録・ログインについて/8.解約について/1.店舗掲載登録を解約する.md
+++ b/2.はじめてガイド/6.店舗掲載登録・ログインについて/8.解約について/1.店舗掲載登録を解約する.md
@@ -83,10 +83,11 @@ GooglePlayアプリから解約してください。
 <strong>店舗掲載登録の退会申請</strong>
 </div>
 
-サイドメニューの［ガイド＆ヘルプ］＞［お問い合わせ］＞［お問い合わせ項目を選ぶ］＞［退会ついて］＞【退会する】より、必要事項をご入力して送信してください。
+サイドメニューの［ガイド＆ヘルプ］＞［お問い合わせ］＞［お問い合わせ項目を選ぶ］＞［退会ついて］＞【退会する】へお進みください。<br>
+バナーをクリックし、退会申請のメールフォームに必要事項をご入力して送信してください。
 
-退会専用のメールフォームに必要事項をご入力して送信してください。
+※コネポケ事務局で現在取引中の商品や出品中・リクエスト中に商品がないか確認のうえ退会手続を行います。
 
-コネポケ事務局から退会完了メールが届きますので、メールの配信をもって退会が完了したします。
+※コネポケ事務局から退会完了メールが届きますので、メールの配信をもって退会が完了いたします。
 
 <hr>
