--- a/6.お問い合わせ/5.退会について/1.退会する.md
+++ b/6.お問い合わせ/5.退会について/1.退会する.md
@@ -3,11 +3,11 @@
 
 会員の退会については下記の【退会申請フォーム】より、退会申請をお願いいたします。
 
-[![mail](https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail1.jpg)](user@conepoke.com)
+[![mail](https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail1.jpg)](mailto:cancel@conepoke.com)
 
 上記のメールフォームに必要事項をご入力して送信してください。
 
-コネポケ事務局で現在取引中の商品や出品中・リクエスト中の商品がないか確認のうえ退会手続を行います。  
+コネポケ事務局で現在取引中の商品や出品中・リクエスト中の商品がないか確認のうえ退会手続を行います。
 
 コネポケ事務局から退会完了メールが届きますので、メールの配信をもって退会完了となります。
 
