--- a/6.お問い合わせ/5.退会について/1.退会する.md
+++ b/6.お問い合わせ/5.退会について/1.退会する.md
@@ -1,11 +1,39 @@
 <h3>退会する</h3>
 <hr>
 
-会員の退会については下記の【退会申請フォーム】より、退会申請をお願いいたします。
+会員の退会については下記の【退会申請フォーム】をクリック後、メールにて退会申請をお願いいたします。  
+本文内のテンプレートに必要事項をご入力して送信してください。
 
-[![mail](https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail1.jpg)](mailto:cancel@conepoke.com)
-
-上記のメールフォームに必要事項をご入力して送信してください。
+<a href="mailto:cancel@conepoke.com?subject=退会申請&amp;body=退会をご希望の方は下記のご入力をお願い致します。%0D%0A
+%0D%0A
+※印は必須項目ですので、必ずご入力ください%0D%0A
+%0D%0A
+---------------%0D%0A
+%0D%0A
+●ログインID（登録携帯番号）※%0D%0A
+%0D%0A
+%0D%0A
+●お名前 ※%0D%0A
+（店舗会員様の場合は代表者様名）%0D%0A
+%0D%0A
+%0D%0A
+●店舗名（店舗会員様のみ ※）%0D%0A
+%0D%0A
+%0D%0A
+●弊社サービスでご登録中のメールアドレス ※%0D%0A
+%0D%0A
+%0D%0A
+●今後のサービス品質向上の為、アカウント削除（退会）の理由をお教えいただけますと幸いです%0D%0A
+%0D%0A
+%0D%0A
+---------------%0D%0A
+%0D%0A
+%0D%0A
+上記内容をご記入後、そのまま送信してください。%0D%0A
+%0D%0A
+コネポケ事務局で現在取引中の商品や出品中・リクエスト中の商品がないか確認のうえ退会手続を行います。%0D%0A
+%0D%0A
+当社から退会処理完了のメール到着で退会が完了となります。">退会申請フォーム</a>
 
 コネポケ事務局で現在取引中の商品や出品中・リクエスト中の商品がないか確認のうえ退会手続を行います。
 
