--- a/6.お問い合わせ/5.退会について/1.退会する.md
+++ b/6.お問い合わせ/5.退会について/1.退会する.md
@@ -9,7 +9,8 @@
 <strong>退会の流れ</strong>
 </div>
 
-退会をご希望の方は、メール本文に以下の必要事項をご入力して送信してください。
+退会をご希望の方は、メール本文に以下の必要事項をご入力して送信してください。  
+（本文のフォームが文字化けしている場合は、下記内容を手動でご入力ください）
 
 <div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
 <ul>
