--- a/6.お問い合わせ/5.退会について/1.退会する.md
+++ b/6.お問い合わせ/5.退会について/1.退会する.md
@@ -3,7 +3,7 @@
 
 会員の退会については下記の【★退会申請フォーム】をクリック後、メールにて退会申請をお願いいたします。
 
-<a href="mailto:cancel@conepoke.com?subject=退会申請&amp;body=%91%DE%89%EF%82%F0%82%B2%8A%F3%96%5D%82%CC%95%FB%82%CD%89%BA%8BL%82%CC%82%B2%93%FC%97%CD%82%F0%82%A8%8A%E8%82%A2%92v%82%B5%82%DC%82%B7%81B%0A%0A%81%A6%88%F3%82%CD%95K%90%7B%8D%80%96%DA%82%C5%82%B7%82%CC%82%C5%81A%95K%82%B8%82%B2%93%FC%97%CD%82%AD%82%BE%82%B3%82%A2%0A%0A---------------%0A%0A%81%9C%83%8D%83O%83C%83%93ID%81i%93o%98%5E%8Cg%91%D1%94%D4%8D%86%81j%81%A6%0A%0A%0A%81%9C%82%A8%96%BC%91O%20%81%A6%0A%81i%93X%95%DC%89%EF%88%F5%97l%82%CC%8F%EA%8D%87%82%CD%91%E3%95%5C%8E%D2%97l%96%BC%81j%0A%0A%0A%81%9C%93X%95%DC%96%BC%81i%93X%95%DC%89%EF%88%F5%97l%82%CC%82%DD%20%81%A6%81j%0A%0A%0A%81%9C%95%BE%8E%D0%83T%81%5B%83r%83X%82%C5%82%B2%93o%98%5E%92%86%82%CC%83%81%81%5B%83%8B%83A%83h%83%8C%83X%20%81%A6%0A%0A%0A%81%9C%8D%A1%8C%E3%82%CC%83T%81%5B%83r%83X%95i%8E%BF%8C%FC%8F%E3%82%CC%88%D7%81A%83A%83J%83E%83%93%83g%8D%ED%8F%9C%81i%91%DE%89%EF%81j%82%CC%97%9D%97R%82%F0%82%A8%8B%B3%82%A6%82%A2%82%BD%82%BE%82%AF%82%DC%82%B7%82%C6%8DK%82%A2%82%C5%82%B7%0A%0A%0A%0A---------------%0A%0A%0A%8F%E3%8BL%93%E0%97e%82%F0%82%B2%8BL%93%FC%8C%E3%81A%82%BB%82%CC%82%DC%82%DC%91%97%90M%82%B5%82%C4%82%AD%82%BE%82%B3%82%A2%81B%0A%0A%83R%83l%83%7C%83P%8E%96%96%B1%8B%C7%82%C5%8C%BB%8D%DD%8E%E6%88%F8%92%86%82%CC%8F%A4%95i%82%E2%8Fo%95i%92%86%81E%83%8A%83N%83G%83X%83g%92%86%82%CC%8F%A4%95i%82%AA%82%C8%82%A2%82%A9%8Am%94F%82%CC%82%A4%82%A6%91%DE%89%EF%8E%E8%91%B1%82%F0%8Ds%82%A2%82%DC%82%B7%81B%0A%0A%93%96%8E%D0%82%A9%82%E7%91%DE%89%EF%8F%88%97%9D%8A%AE%97%B9%82%CC%83%81%81%5B%83%8B%93%9E%92%85%82%C5%91%DE%89%EF%82%AA%8A%AE%97%B9%82%C6%82%C8%82%E8%82%DC%82%B7%81B%0A">退会申請フォーム</a>
+<a href="mailto:cancel@conepoke.com?subject=退会申請&amp;body=%91%DE%89%EF%82%F0%82%B2%8A%F3%96%5D%82%CC%95%FB%82%CD%89%BA%8BL%82%CC%82%B2%93%FC%97%CD%82%F0%82%A8%8A%E8%82%A2%92v%82%B5%82%DC%82%B7%81B%0A%0A%81%A6%88%F3%82%CD%95K%90%7B%8D%80%96%DA%82%C5%82%B7%82%CC%82%C5%81A%95K%82%B8%82%B2%93%FC%97%CD%82%AD%82%BE%82%B3%82%A2%0A%0A---------------%0A%0A%81%9C%83%8D%83O%83C%83%93ID%81i%93o%98%5E%8Cg%91%D1%94%D4%8D%86%81j%81%A6%0A%0A%0A%81%9C%82%A8%96%BC%91O%20%81%A6%0A%81i%93X%95%DC%89%EF%88%F5%97l%82%CC%8F%EA%8D%87%82%CD%91%E3%95%5C%8E%D2%97l%96%BC%81j%0A%0A%0A%81%9C%93X%95%DC%96%BC%81i%93X%95%DC%89%EF%88%F5%97l%82%CC%82%DD%20%81%A6%81j%0A%0A%0A%81%9C%95%BE%8E%D0%83T%81%5B%83r%83X%82%C5%82%B2%93o%98%5E%92%86%82%CC%83%81%81%5B%83%8B%83A%83h%83%8C%83X%20%81%A6%0A%0A%0A%81%9C%8D%A1%8C%E3%82%CC%83T%81%5B%83r%83X%95i%8E%BF%8C%FC%8F%E3%82%CC%88%D7%81A%83A%83J%83E%83%93%83g%8D%ED%8F%9C%81i%91%DE%89%EF%81j%82%CC%97%9D%97R%82%F0%82%A8%8B%B3%82%A6%82%A2%82%BD%82%BE%82%AF%82%DC%82%B7%82%C6%8DK%82%A2%82%C5%82%B7%0A%0A%0A%0A---------------%0A%0A%0A%8F%E3%8BL%93%E0%97e%82%F0%82%B2%8BL%93%FC%8C%E3%81A%82%BB%82%CC%82%DC%82%DC%91%97%90M%82%B5%82%C4%82%AD%82%BE%82%B3%82%A2%81B%0A%0A%83R%83l%83%7C%83P%8E%96%96%B1%8B%C7%82%C5%8C%BB%8D%DD%8E%E6%88%F8%92%86%82%CC%8F%A4%95i%82%E2%8Fo%95i%92%86%81E%83%8A%83N%83G%83X%83g%92%86%82%CC%8F%A4%95i%82%AA%82%C8%82%A2%82%A9%8Am%94F%82%CC%82%A4%82%A6%91%DE%89%EF%8E%E8%91%B1%82%F0%8Ds%82%A2%82%DC%82%B7%81B%0A%0A%93%96%8E%D0%82%A9%82%E7%91%DE%89%EF%8F%88%97%9D%8A%AE%97%B9%82%CC%83%81%81%5B%83%8B%93%9E%92%85%82%C5%91%DE%89%EF%82%AA%8A%AE%97%B9%82%C6%82%C8%82%E8%82%DC%82%B7%81B%0A"><img src="https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail1.jpg" alt="退会申請フォーム"></a>
 
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <strong>退会の流れ</strong>
