--- a/6.お問い合わせ/5.退会について/1.退会する.md
+++ b/6.お問い合わせ/5.退会について/1.退会する.md
@@ -1,7 +1,7 @@
 <h3>退会する</h3>
 <hr>
 
-会員の退会については【お問い合わせバナー】をクリック後、メールにて退会申請をお願いいたします。
+会員の退会については【お問い合わせフォームへ】をクリック後、メールにて退会申請をお願いいたします。
 
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <strong>退会の流れ</strong>
