--- a/6.お問い合わせ/3.会員登録について/3.会員登録情報の変更方法.md
+++ b/6.お問い合わせ/3.会員登録について/3.会員登録情報の変更方法.md
@@ -93,6 +93,7 @@
 
 ※誤って入力された場合や、ご結婚などによりお名前が変更となった場合は、身分証の画像を添えてコネポケ事務局までご連絡ください。</font>
 
-[![mail](https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail1.jpg)](mailto:support@conepoke.com)
+<a href="mailto:support@conepoke.com?subject=コネポケ公式ガイドから問い合わせ（会員情報の変更依頼）">
+<img src="https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail1.jpg" alt="メールでお問い合わせ"></a>
 
 <hr>
