--- a/6.お問い合わせ/3.会員登録について/4.ログインできない.md
+++ b/6.お問い合わせ/3.会員登録について/4.ログインできない.md
@@ -27,6 +27,7 @@
 なお、メールが届いていない場合やお取引中で連絡をとる必要がある場合、状況について確認いたしますので、下記よりお問い合わせいただきますようお願いいたします。<br>
 </div>
 
-[![mail](https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail1.jpg)](mailto:support@conepoke.com)
+<a href="mailto:support@conepoke.com?subject=コネポケ公式ガイドから問い合わせ（ログインできない）">
+<img src="https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail1.jpg" alt="メールでお問い合わせ"></a>
 
 <hr>
