--- a/6.お問い合わせ/4.店舗掲載登録ついて/3.店舗登録情報の変更方法.md
+++ b/6.お問い合わせ/4.店舗掲載登録ついて/3.店舗登録情報の変更方法.md
@@ -5,7 +5,8 @@
 
 <strong>「店名」「代表者様」「ご住所」</strong>を変更されたい場合は、下記いづれかの確認書類の画像を添えて、コネポケ事務局までご連絡ください。
 
-[![mail](https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail1.jpg)](mailto:support@conepoke.com)
+<a href="mailto:support@conepoke.com?subject=コネポケ公式ガイドから問い合わせ（店舗登録情報の変更）">
+<img src="https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail1.jpg" alt="メールでお問い合わせ"></a>
 
 <div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
 <ul>
