--- a/2.はじめてガイド/6.店舗掲載登録・ログインについて/8.解約について/3.店舗掲載登録を退会した後、再登録したい.md
+++ b/2.はじめてガイド/6.店舗掲載登録・ログインについて/8.解約について/3.店舗掲載登録を退会した後、再登録したい.md
@@ -33,6 +33,7 @@
 </ol>
 </div>
 
-[![mail](https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail1.jpg)](mailto:support@conepoke.com)
+<a href="mailto:support@conepoke.com?subject=コネポケ公式ガイドから問い合わせ（退会した後、再登録したい）">
+<img src="https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail1.jpg" alt="メールでお問い合わせ"></a>
 
 <hr>
