--- a/4.カテゴリから探す/6.店舗掲載登録・ログインについて/2.店舗登録ができない.md
+++ b/4.カテゴリから探す/6.店舗掲載登録・ログインについて/2.店舗登録ができない.md
@@ -29,7 +29,8 @@
 </ul>
 </div>
 
-[![mail](https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail1.jpg)](mailto:support@conepoke.com)
+<a href="mailto:support@conepoke.com?subject=コネポケ公式ガイドから問い合わせ（新規店舗登録ができない）">
+<img src="https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail1.jpg" alt="メールでお問い合わせ"></a>
 
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <strong>２.パスワードが入力条件にあっていない。</strong>
