--- a/6.お問い合わせ/5.退会について/2.退会した後、再登録したい.md
+++ b/6.お問い合わせ/5.退会について/2.退会した後、再登録したい.md
@@ -2,11 +2,12 @@
 <hr>
 
 コネポケでご利用できるアカウントは１つのみ有効です。
+一度退会されますと新たに登録することはできません。
 
-退会後、再登録をご希望される場合は、過去のアカウントを復活させる対応となります。
+しかしながら、退会時期やご利用状況によっては、以前利用されていたアカウントを再度利用できる状態へ復元できる場合がございます。
 
 <font color="ff0000">※退会したIDでログインまたは新規登録しようとした場合は下記の表示がされます。</font>  
-<strong>【コネポケを退会しています。復帰されたい場合はガイド＆ヘルプの「お問い合わせ」よりご連絡ください。】</strong>
+<strong>【コネポケを退会しています。復帰を希望される場合はガイド＆ヘルプの「お問い合わせ」よりご連絡ください。】</strong>
 
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <strong>再登録の流れ（個人会員様）</strong>
