--- a/2.はじめてガイド/5.会員登録・ログインについて/7.退会・プレミアム会員の解約について/4.退会した後、再登録したい.md
+++ b/2.はじめてガイド/5.会員登録・ログインについて/7.退会・プレミアム会員の解約について/4.退会した後、再登録したい.md
@@ -2,8 +2,9 @@
 <hr>
 
 コネポケでご利用できるアカウントは１つのみ有効です。
+一度退会されますと新たに登録することはできません。
 
-退会後、再登録をご希望される場合は、過去のアカウントを復活させる対応となります。
+しかしながら、退会時期やご利用状況によっては、以前利用されていたアカウントを再度利用できる状態へ復元できる場合がございます。
 
 <font color="ff0000">※退会したIDでログインまたは新規登録しようとした場合は下記の表示がされます。</font>  
 <strong>【コネポケを退会しています。復帰されたい場合はガイド＆ヘルプの「お問い合わせ」よりご連絡ください。】</strong>
